Stop images from overflowing the viewport

--- a/src/MDEditor.css
+++ b/src/MDEditor.css
@@ -11,3 +11,7 @@
 .MDEditor-preview blockquote {
   margin-left: 2.5rem;
 }
+
+.MDEditor-preview img {
+  max-width: 100%;
+}
